# wayland-hs

./: .gitignore  .hie-yaml  README.md  cabal.project  hie.yaml  wayland-hs.cabal
src/Graphics/: Flag.hs  ForeignUtil.hs
src/Graphics/Wayland/: Remote.hs  Scanner.hs  Test.hs  Util.chs
src/Graphics/Wayland/Client/: Proxy.chs
src/Graphics/Wayland/Protocol/: Client.hs  Server.hs  Types.hs
src/Graphics/Wayland/Scanner/: Env.hs  Flag.hs  Marshal.hs  Marshall.hs  Naming.hs  Parse.hs  Types.hs
src/Graphics/Wayland/Scanner/Generate/: Arguments.hs  Documentation.hs  GenArguments.hs  GenMethods.hs  GenTypes.hs  Types.hs
src/Graphics/Wayland/Server/: Resource.chs
wayland-hs/: CHANGELOG.md  wayland-hs.cabal
wayland-hs/src/Graphics/Wayland/: Scanner.hs
wayland-hs/src/Graphics/Wayland/Protocol/: Client.hs  Server.hs
wayland-hs/src/Graphics/Wayland/Scanner/: Env.hs  Marshal.hs  Parse.hs  Pointers.hs  Types.hs
wayland-hs/src/Graphics/Wayland/Scanner/Generate/: GenArguments.hs  GenMethods.hs  GenTypes.hs
wayland-hs/src/Graphics/Wayland/Server/: Resource.chs
wayland-util/: CHANGELOG.md  wayland-util.cabal
wayland-util/src/Graphics/: ForeignUtil.hs
wayland-util/src/Graphics/Wayland/: Remote.hs  Util.chs
wayland-util/src/Graphics/Wayland/Client/: Proxy.chs
wayland-util/src/Graphics/Wayland/Server/: Resource.chs
