cabal-version:      3.0
name:               wayland-util
version:            0.1.0.0
synopsis:           Utility sublibrary for wayland-hs
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Abastro
maintainer:         abab9579@gmail.com
-- copyright:
category:           Graphics
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
  ghc-options: -Wall

library
  import:           warnings

  exposed-modules:
    Graphics.Flag

    Graphics.Wayland.Remote

    Graphics.Wayland.Util
    Graphics.Wayland.Client.Proxy
    Graphics.Wayland.Server.Resource
  other-modules:
    Graphics.ForeignUtil

  default-extensions:
    LambdaCase
    RecordWildCards
    NoFieldSelectors
    OverloadedRecordDot
  build-depends:
    base ^>=4.17.1.0,
    containers,
    transformers,
    mtl,
    bytestring,
    text,
    vector,
  build-tool-depends:
    c2hs:c2hs >=0.28,
  pkgconfig-depends:
    wayland-client >=1.21,
    wayland-server >=1.21,
  hs-source-dirs:   src
  default-language: GHC2021
